fixed color log readabuility

--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ a{
 }
 
 .listcolor {
-    background-color: rgb(153, 163, 173);
+    background-color: rgb(255, 255, 255);
     border: solid 2px;
     width: 50%;
     margin: 0 auto;
